@@ -83,6 +83,7 @@ import org.thingsboard.server.dao.notification.NotificationTemplateService;
 import org.thingsboard.server.queue.util.TbCoreComponent;
 import org.thingsboard.server.service.notification.NotificationProcessingContext;
 import org.thingsboard.server.service.security.model.SecurityUser;
+import org.thingsboard.server.service.translation.TranslationService;
 
 import java.util.Comparator;
 import java.util.HashMap;
@@ -119,6 +120,7 @@ public class NotificationController extends BaseController {
     private final NotificationTargetService notificationTargetService;
     private final NotificationCenter notificationCenter;
     private final NotificationSettingsService notificationSettingsService;
+    private final TranslationService translationService;
 
     @ApiOperation(value = "Get notifications (getNotifications)",
             notes = "Returns the page of notifications for current user." + NEW_LINE +
@@ -280,6 +282,12 @@ public class NotificationController extends BaseController {
         }
         notificationRequest.setTenantId(user.getTenantId());
         checkEntity(notificationRequest.getId(), notificationRequest, NOTIFICATION);
+        List<NotificationTargetId> targets = notificationRequest.getTargets().stream()
+                .map(NotificationTargetId::new)
+                .toList();
+        for (NotificationTargetId targetId : targets) {
+            checkNotificationTargetId(targetId, Operation.READ);
+        }
 
         notificationRequest.setOriginatorEntityId(user.getId());
         notificationRequest.setInfo(null);
@@ -314,9 +322,15 @@ public class NotificationController extends BaseController {
         request.setOriginatorEntityId(user.getId());
         List<NotificationTarget> targets = request.getTargets().stream()
                 .map(NotificationTargetId::new)
-                .map(targetId -> notificationTargetService.findNotificationTargetById(user.getTenantId(), targetId))
+                .map(targetId -> {
+                    NotificationTarget target = notificationTargetService.findNotificationTargetById(user.getTenantId(), targetId);
+                    if (target == null) {
+                        throw new IllegalArgumentException("Notification target for id " + targetId + " not found");
+                    }
+                    return target;
+                })
                 .sorted(Comparator.comparing(target -> target.getConfiguration().getType()))
-                .collect(Collectors.toList());
+                .toList();
 
         NotificationRequestPreview preview = new NotificationRequestPreview();
 
@@ -324,6 +338,8 @@ public class NotificationController extends BaseController {
         Map<String, Integer> recipientsCountByTarget = new LinkedHashMap<>();
         Map<NotificationTargetType, NotificationRecipient> firstRecipient = new HashMap<>();
         for (NotificationTarget target : targets) {
+            checkEntity(getCurrentUser(), target, Operation.READ);
+
             int recipientsCount;
             List<NotificationRecipient> recipientsPart;
             NotificationTargetType targetType = target.getConfiguration().getType();
@@ -379,6 +395,7 @@ public class NotificationController extends BaseController {
                 .deliveryMethods(deliveryMethods)
                 .template(template)
                 .settings(null)
+                .translationProvider(locale -> translationService.getFullTranslation(user.getTenantId(), null, locale))
                 .build();
         Map<NotificationDeliveryMethod, DeliveryMethodNotificationTemplate> processedTemplates = ctx.getDeliveryMethods().stream()
                 .collect(Collectors.toMap(m -> m, deliveryMethod -> {
